<resources>
    <string name="app_name">HapusPlant</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registerLink">Don\'t have an account? <b><u>Register</u></b></string>
    <string name="forgotLink"><b>Forgot Password?</b></string>
    <string name="applogo">AppLogo</string>
    <string name="login">Login</string>
    <string name="signupTitle">Sign Up on\nHapus Plant</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="birthdate">Birthdate</string>
    <string name="register">Register</string>
    <string name="dateformat">%1$d-%2$d-%3$d</string>
    <string name="succulentimage">succulentImage</string>
    <string name="prueba">Prueba</string>
    <string name="isEndemic">Is Endemic?</string>
    <string name="hasDocuments">Has Pappers?</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="download_button">Download Button</string>
    <string name="home">Home</string>
    <string name="my_gallery">My Gallery</string>
    <string name="other_s_collections">Other\'s collections</string>
    <string name="profile">Profile</string>
    <string name="collections">Shared Contacts</string>
    <string name="logout">Logout</string>
    <string name="match">The passwords doesn\'t match</string>
    <string name="username_validation">Username is required</string>
    <string name="password_validation">Password is required</string>
    <string name="repeat_validation">Repeat Password is required</string>
    <string name="name_validation">First Name is required</string>
    <string name="lastname_validation">Last Name is required</string>
    <string name="birthdate_validation">Birthday is required</string>
    <string name="register_succulent">Register Succulent</string>
    <string name="family_name">Genre Name</string>
    <string name="family_verification">The genre is required</string>
    <string name="name">Name</string>
    <string name="is_endemic">Is Endemic?</string>
    <string name="has_pappers">Has Pappers?</string>
    <string name="is_alive">Is Alive?</string>
    <string name="succulent_image">Succulent Image</string>
    <string name="my_collection">My Collection</string>
    <string name="register_family">Register Genre</string>
    <string name="addSimbol">+</string>
    <string name="add_button">Add button</string>
    <string name="loading">Loading...</string>
    <string name="testing_test">Testing test</string>
    <string name="my_sharing_contacts">My Sharing Contacts</string>
    <string name="other_contacts">Other Contacts</string>
    <string name="my_wishlist">Wishlist</string>
</resources>