<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SucculentKindForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#000000"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/poppins_black"
            android:textAlignment="center"
            android:text="@string/register_succulent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivAddSucculent"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/succulent_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tvFamily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/family_name"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/btnAddFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_add"
                android:text="@string/addSimbol"
                android:contentDescription="@string/add_button" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spFamily"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#DCDCDC"
            android:ems="10"
            android:dropDownVerticalOffset="48dp"
            android:fontFamily="@font/poppins_regular"
            android:labelFor="@id/tvFamily"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvFamilyVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/poppins_regular"
            android:visibility="gone"
            android:text="@string/family_verification"
            android:textColor="#FF0000"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:importantForAutofill="no"
            android:background="@drawable/rounded"
            android:backgroundTint="#DCDCDC"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:labelFor="@id/tvName"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvNameValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/poppins_regular"
            android:visibility="gone"
            android:text="@string/password_validation"
            android:textColor="#FF0000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvEndemic"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/is_endemic"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/swEndemic"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                tools:ignore="UseSwitchCompatOrMaterialXml,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvPappers"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="22dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/has_pappers"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/swPappers"
                android:layout_width="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_height="48dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvAlive"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/is_alive"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/swAlive"
                android:layout_width="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_height="48dp"
                android:checked="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegisterSucculent"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:background="@drawable/rounded"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>

</ScrollView>