<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/applogo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/username"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="username"
            android:background="@drawable/rounded"
            android:backgroundTint="#DCDCDC"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPersonName"
            android:labelFor="@id/tvUsername"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvUsernameValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/username_validation"
            android:textColor="#FF0000"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:labelFor="@id/tvPassword"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/rounded"
            android:backgroundTint="#DCDCDC"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tvPasswordValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/password_validation"
            android:textColor="#FF0000"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="50dp"
            android:text="@string/login"
            android:background="@drawable/rounded"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/registerLink"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgotLink"
            android:textSize="15sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>