<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#000000"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/poppins_black"
            android:textAlignment="center"
            android:text="@string/register_family" />

        <TextView
            android:id="@+id/tvRegisterFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/family_name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etRegisterFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:importantForAutofill="no"
            android:background="@drawable/rounded"
            android:backgroundTint="#DCDCDC"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:labelFor="@id/tvRegisterFamily"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="20sp"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvRegisterFamilyVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/poppins_regular"
            android:visibility="gone"
            android:text="@string/family_verification"
            android:textColor="#FF0000"/>

        <Button
            android:id="@+id/btnRegisterFamily"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:background="@drawable/rounded"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>

</ScrollView>